Fixed tutorial overflow

--- a/public/styles/schedule/framework.less
+++ b/public/styles/schedule/framework.less
@@ -58,6 +58,7 @@ body{
 	background: url('/images/backbone/tutorial.png') 0px 10px no-repeat;
 	background-size: contain;
 	z-index: 350;
+	overflow: hidden;
 	.all-the-things{
 		margin: 250px auto 0 auto;
 		background: url('/images/backbone/all-the-things.png') 0px 10px no-repeat;
